--- a/templates/homeapp/index.html
+++ b/templates/homeapp/index.html
@@ -88,6 +88,37 @@
 								<br>
 								<br>
 								<div class="item-info-product">
+									{% if product.offer %}
+									<div class="info-product-price">
+										<div class="grid_meta">
+											<div class="product_price">
+												<h4>
+													<a href="{{ product.get_url }}"> {{ product.brand.brand_name }} </a>
+												</h4>
+												<div class="grid-price mt-2">
+													<span class="money "> <del>&#8377;{{ product.price }}</del> &#8377;{{product.get_offer_price}} </span>
+												</div>
+												<span style="color:red;">({{product.offer.off_percent}}% off)</span>
+											</div>
+
+										</div>
+									</div>
+									{% elif product.category.offer %}
+									<div class="info-product-price">
+										<div class="grid_meta">
+											<div class="product_price">
+												<h4>
+													<a href="{{ product.get_url }}"> {{ product.brand.brand_name }} </a>
+												</h4>
+												<div class="grid-price mt-2">
+													<span class="money "> <del>&#8377;{{ product.price }}</del> &#8377;{{product.get_offer_price_by_category }} </span>
+												</div>
+												<span style="color:red;">({{product.category.offer.off_percent}}% off)</span>
+											</div>
+										
+										</div>
+									</div>
+									{% else %}
 									<div class="info-product-price">
 										<div class="grid_meta">
 											<div class="product_price">
@@ -97,50 +128,20 @@
 												<div class="grid-price mt-2">
 													<span class="money ">{{product.price}}</span>
 												</div>
+												<br>
 											</div>
-											<ul class="stars">
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star-half-o" aria-hidden="true"></i>
-													</a>
-												</li>
-											</ul>
-										</div>
-										<div class="googles single-item hvr-outline-out">
-											<form action="#" method="post">
-												<input type="hidden" name="cmd" value="_cart">
-												<input type="hidden" name="add" value="1">
-												<input type="hidden" name="googles_item" value="Farenheit">
-												<input type="hidden" name="amount" value="575.00">
-												<button type="submit" class="googles-cart pgoogles-cart">
-													<i class="fas fa-cart-plus"></i>
-												</button>
-
-												
-											</form>
-
+											
 										</div>
 									</div>
+									{% endif %}
+									<div class="googles single-item hvr-outline-out">
+														
+										<button  class="googles-cart pgoogles-cart">
+											<a href="{% url 'addcart' product.id %}"><i class="fas fa-cart-plus"></i></a>
+										</button>
+									
+
+								</div>
 									<div class="clearfix"></div>
 								</div>
 							</div>
@@ -185,6 +186,55 @@
 												<div class="item-info-product">
 													<br>
 													<br>
+													{% if product.offer %}
+													<div class="info-product-price">
+														<div class="grid_meta">
+															<div class="product_price">
+																<h4>
+																	<a href="{{ product.get_url }}">{{ product.brand.brand_name }}</a>
+																</h4>
+																<div class="grid-price mt-2">
+																	<span class="money "> <del>&#8377;{{ product.price }}</del> &#8377;{{product.get_offer_price}} </span>
+																</div>
+																<span style="color:red;">({{product.offer.off_percent}}% off)</span>
+															</div>
+
+														</div>
+														<div class="googles single-item hvr-outline-out">
+														
+															<button  class="googles-cart pgoogles-cart">
+																<a href="{% url 'addcart' product.id %}"><i class="fas fa-cart-plus"></i></a>
+															</button>
+														
+
+														</div>
+
+													</div>
+													{% elif product.category.offer %}
+													<div class="info-product-price">
+														<div class="grid_meta">
+															<div class="product_price">
+																<h4>
+																	<a href="{{ product.get_url }}">{{ product.brand.brand_name }}</a>
+																</h4>
+																<div class="grid-price mt-2">
+																	<span class="money "> <del>&#8377;{{ product.price }}</del> &#8377;{{product.get_offer_price_by_category }} </span>
+																</div>
+																<span style="color:red;">({{product.category.offer.off_percent}}% off)</span>
+															</div>
+
+														</div>
+														<div class="googles single-item hvr-outline-out">
+														
+															<button  class="googles-cart pgoogles-cart">
+																<a href="{% url 'addcart' product.id %}"><i class="fas fa-cart-plus"></i></a>
+															</button>
+														
+
+														</div>
+
+													</div>
+													{%else%}
 													<div class="info-product-price">
 														<div class="grid_meta">
 															<div class="product_price">
@@ -194,48 +244,21 @@
 																<div class="grid-price mt-2">
 																	<span class="money ">{{product.price}}</span>
 																</div>
+																<br>
 															</div>
-															<ul class="stars">
-																<li>
-																	<a href="#">
-																		<i class="fa fa-star" aria-hidden="true"></i>
-																	</a>
-																</li>
-																<li>
-																	<a href="#">
-																		<i class="fa fa-star" aria-hidden="true"></i>
-																	</a>
-																</li>
-																<li>
-																	<a href="#">
-																		<i class="fa fa-star" aria-hidden="true"></i>
-																	</a>
-																</li>
-																<li>
-																	<a href="#">
-																		<i class="fa fa-star-half-o" aria-hidden="true"></i>
-																	</a>
-																</li>
-																<li>
-																	<a href="#">
-																		<i class="fa fa-star-o" aria-hidden="true"></i>
-																	</a>
-																</li>
-															</ul>
-														</div>
-														<div class="googles single-item hvr-outline-out">
-															<form action="#" method="post">
-																<input type="hidden" name="cmd" value="_cart">
-																<input type="hidden" name="add" value="1">
-																<input type="hidden" name="googles_item" value="Fastrack Aviator">
-																<input type="hidden" name="amount" value="325.00">
-																<button type="submit" class="googles-cart pgoogles-cart">
-																	<i class="fas fa-cart-plus"></i>
-																</button>
-															</form>
 
 														</div>
+														<div class="googles single-item hvr-outline-out">
+														
+															<button  class="googles-cart pgoogles-cart">
+																<a href="{% url 'addcart' product.id %}"><i class="fas fa-cart-plus"></i></a>
+															</button>
+														
+
+														</div>
+
 													</div>
+													{% endif %}
 
 												</div>
 											</div>
