--- a/templates/homeapp/base.html
+++ b/templates/homeapp/base.html
@@ -69,6 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<a class="dropdown-item" href="{% url 'handlelogout' %}">Logout</a>
 									<a class="dropdown-item" href="{% url 'profile' %}">My profile</a>
 									<a class="dropdown-item" href="{% url 'myorders' %}">My orders</a>
+									<a class="dropdown-item" href="{% url 'wishlist' %}">My wishlist</a>
 								</div>
 								{% else %}
 								<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
