--- a/templates/adminpanel/page-form-product-1.html
+++ b/templates/adminpanel/page-form-product-1.html
@@ -106,7 +106,17 @@
                       {% endfor %}
                       
                     </select>
-                  </div>                  
+                  </div>
+                  <div class="col-sm-6 mb-3">
+                    <label class="form-label">Offer</label>
+                    <select class="form-select" name="offer">
+                      <option value="">-----</option>
+                      {% for offer in offers %}
+                      <option value="{{ offer.id }}">{{ offer.name }}</option>
+                      {% endfor %}
+                      
+                    </select>
+                  </div>                   
                   <label class="form-check mb-4">
                     <input class="form-check-input" type="checkbox" value="" checked />
                     <span class="form-check-label"> Is available </span>
