offer bug fixed

--- a/templates/adminpanel/brand.html
+++ b/templates/adminpanel/brand.html
@@ -6,13 +6,13 @@
             <h2 class="content-title card-title">Brands</h2>
             <p>Add, edit or delete a Brand</p>
           </div>
-          <div>
+          {% comment %} <div>
             <input
               type="text"
               placeholder="Search Categories"
               class="form-control bg-white"
             />
-          </div>
+          </div> {% endcomment %}
         </div>
         <div class="card">
           <div class="card-body">
