--- a/templates/homeapp/index.html
+++ b/templates/homeapp/index.html
@@ -18,15 +18,15 @@
 				<div class="carousel-inner" role="listbox">
 					<div class="carousel-item active">
 						<div class="carousel-caption text-center">
-							<h3>Men’s eyewear
-								<span>Cool summer sale 50% off</span>
+							<h3>Stylish eyewear
+								<span>Cool summer sale 25% off</span>
 							</h3>
 							<a href="{% url 'store' %}" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
 						</div>
 					</div>
 					<div class="carousel-item item2">
 						<div class="carousel-caption text-center">
-							<h3>Women’s eyewear
+							<h3>Stylish eyewear
 								<span>Want to Look Your Best?</span>
 							</h3>
 							<a href="{% url 'store' %}" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
@@ -35,8 +35,8 @@
 					</div>
 					<div class="carousel-item item3">
 						<div class="carousel-caption text-center">
-							<h3>Men’s eyewear
-								<span>Cool summer sale 50% off</span>
+							<h3>Stylish eyewear
+								<span>Cool summer sale 25% off</span>
 							</h3>
 							<a href="{% url 'store' %}" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
 
@@ -44,7 +44,7 @@
 					</div>
 					<div class="carousel-item item4">
 						<div class="carousel-caption text-center">
-							<h3>Women’s eyewear
+							<h3>Stylish eyewear
 								<span>Want to Look Your Best?</span>
 							</h3>
 							<a href="{% url 'store' %}" class="btn btn-sm animated-button gibson-three mt-4">Shop Now</a>
@@ -271,56 +271,6 @@
 						</div>
 					</div>
 				</div>
-				<!-- /testimonials -->
-				<div class="testimonials py-lg-4 py-3 mt-4">
-					<div class="testimonials-inner py-lg-4 py-3">
-						<h3 class="tittle-w3layouts text-center my-lg-4 my-4">Tesimonials</h3>
-						<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner" role="listbox">
-								<div class="carousel-item active">
-									<div class="testimonials_grid text-center">
-										<h3>Anamaria
-											<span>Customer</span>
-										</h3>
-										<label>United States</label>
-										<p>Maecenas interdum, metus vitae tincidunt porttitor, magna quam egestas sem, ac scelerisque nisl nibh vel lacus.
-											Proin eget gravida odio. Donec ullamcorper est eu accumsan cursus.</p>
-									</div>
-								</div>
-								<div class="carousel-item">
-									<div class="testimonials_grid text-center">
-										<h3>Esmeralda
-											<span>Customer</span>
-										</h3>
-										<label>United States</label>
-										<p>Maecenas interdum, metus vitae tincidunt porttitor, magna quam egestas sem, ac scelerisque nisl nibh vel lacus.
-											Proin eget gravida odio. Donec ullamcorper est eu accumsan cursus.</p>
-									</div>
-								</div>
-								<div class="carousel-item">
-									<div class="testimonials_grid text-center">
-										<h3>Gretchen
-											<span>Customer</span>
-										</h3>
-										<label>United States</label>
-										<p>Maecenas interdum, metus vitae tincidunt porttitor, magna quam egestas sem, ac scelerisque nisl nibh vel lacus.
-											Proin eget gravida odio. Donec ullamcorper est eu accumsan cursus.</p>
-									</div>
-								</div>
-								<a class="carousel-control-prev test" href="#carouselExampleControls" role="button" data-slide="prev">
-									<span class="fas fa-long-arrow-alt-left"></span>
-									<span class="sr-only">Previous</span>
-								</a>
-								<a class="carousel-control-next test" href="#carouselExampleControls" role="button" data-slide="next">
-									<span class="fas fa-long-arrow-alt-right" aria-hidden="true"></span>
-									<span class="sr-only">Next</span>
-
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- //testimonials -->
 				<div class="row galsses-grids pt-lg-5 pt-3">
 					<div class="col-lg-6 galsses-grid-left">
 						<figure class="effect-lexi">
