--- a/templates/adminpanel/base.html
+++ b/templates/adminpanel/base.html
@@ -1,9 +1,9 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head >
     <meta charset="utf-8" />
-    <title>EYEENVY Dashboard</title>
+    <title class="d-print-none">EYEENVY Dashboard</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -32,8 +32,8 @@
   </head>
 
   <body>
-    <div class="screen-overlay"></div>
-    <aside class="navbar-aside" id="offcanvas_aside">
+    <div class="screen-overlay d-print-none"></div>
+    <aside class="navbar-aside d-print-none" id="offcanvas_aside">
       <div class="aside-top">
         <a href="{% url 'admin_dashboard' %}" class="brand-wrap">
           <h3>EyeEnvy</h3>
@@ -65,7 +65,7 @@
           </li>
           <li class="menu-item has-submenu">
             <a class="menu-link" href="page-products-list.html">
-              <i class="icon material-icons md-shopping_bag"></i>
+              <i class="icon material-icons md-percentage"></i>
               <span class="text">Offers</span>
             </a>
             <div class="submenu">
@@ -92,15 +92,7 @@
               <a href="{% url 'addproduct' %}">Add product 1</a>
             </div>
           </li>
-          <li class="menu-item has-submenu">
-            <a class="menu-link" href="page-transactions-1.html">
-              <i class="icon material-icons md-monetization_on"></i>
-              <span class="text">Transactions</span>
-            </a>
-            <div class="submenu">
-              <a href="page-transactions-1.html">Transaction 1</a>
-            </div>
-          </li>
+
           <li class="menu-item has-submenu">
             <a class="menu-link" href="#">
               <i class="icon material-icons md-person"></i>
@@ -111,13 +103,7 @@
             </div>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="page-reviews.html">
-              <i class="icon material-icons md-comment"></i>
-              <span class="text">Reviews</span>
-            </a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="page-brands.html">
+            <a class="menu-link" href="{% url 'addbrand' %}">
               <i class="icon material-icons md-stars"></i>
               <span class="text">Brands</span>
             </a>
@@ -135,7 +121,7 @@
       </nav>
     </aside>
     <main class="main-wrap">
-      <header class="main-header navbar">
+      <header class="main-header navbar d-print-none">
         <div class="col-search">
             {% block search_user %}
           {% comment %} <form class="searchform">
@@ -162,55 +148,11 @@
           </button>
           <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link btn-icon" href="#">
-                <i class="material-icons md-notifications animation-shake"></i>
-                <span class="badge rounded-pill">3</span>
-              </a>
-            </li>
-            <li class="nav-item">
               <a href="#" class="requestfullscreen nav-link btn-icon"
                 ><i class="material-icons md-cast"></i
               ></a>
             </li>
-            <li class="dropdown nav-item">
-              <a
-                class="dropdown-toggle"
-                data-bs-toggle="dropdown"
-                href="#"
-                id="dropdownLanguage"
-                aria-expanded="false"
-                ><i class="material-icons md-public"></i
-              ></a>
-              <div
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="dropdownLanguage"
-              >
-                <a class="dropdown-item text-brand" href="#"
-                  ><img
-                    src="/static/admin_assets/imgs/theme/flag-us.png"
-                    alt="English"
-                  />English</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><img
-                    src="/static/admin_assets/imgs/theme/flag-fr.png"
-                    alt="Français"
-                  />Français</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><img
-                    src="/static/admin_assets/imgs/theme/flag-jp.png"
-                    alt="Français"
-                  />日本語</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><img
-                    src="/static/admin_assets/imgs/theme/flag-cn.png"
-                    alt="Français"
-                  />中国人</a
-                >
-              </div>
-            </li>
+            
             <li class="dropdown nav-item">
               <a
                 class="dropdown-toggle"
@@ -228,23 +170,11 @@
                 class="dropdown-menu dropdown-menu-end"
                 aria-labelledby="dropdownAccount"
               >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-perm_identity"></i>Edit
-                  Profile</a
+                <a class="dropdown-item" href="{% url 'index' %}"
+                  ><i class="material-icons md-exit_to_app"></i>Back to site
+                  </a
                 >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-settings"></i>Account Settings</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-account_balance_wallet"></i
-                  >Wallet</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-receipt"></i>Billing</a
-                >
-                <a class="dropdown-item" href="#"
-                  ><i class="material-icons md-help_outline"></i>Help center</a
-                >
+
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-danger" href="{% url 'signout' %}"
                   ><i class="material-icons md-exit_to_app"></i>Logout</a
