--- a/templates/adminpanel/page-products-grid-2.html
+++ b/templates/adminpanel/page-products-grid-2.html
@@ -21,12 +21,10 @@
                     </div>
                     {%endfor%} {%endif%}
                     <div>
-                        <a href="#" class="btn btn-light rounded font-md">Export</a>
-                        <a href="#" class="btn btn-light rounded font-md">Import</a>
                         <a href=" {% url 'addproduct' %}" class="btn btn-primary btn-sm rounded">Create new</a>
                     </div>
                 </div>
-                <header class="card card-body mb-4">
+                {% comment %} <header class="card card-body mb-4">
                     <div class="row gx-3">
                         <div class="col-lg-4 col-md-6 me-auto">
                             <input type="text" placeholder="Search..." class="form-control" />
@@ -47,7 +45,7 @@
                             </select>
                         </div>
                     </div>
-                </header>
+                </header> {% endcomment %}
                 <!-- card-header end// -->
                 <div class="row">
                     {% for product in products %}
@@ -73,20 +71,7 @@
                     <!-- col.// -->
                 </div>
                 <!-- row.// -->
-                <div class="pagination-area mt-15 mb-50">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-start">
-                            <li class="page-item active"><a class="page-link" href="#">01</a></li>
-                            <li class="page-item"><a class="page-link" href="#">02</a></li>
-                            <li class="page-item"><a class="page-link" href="#">03</a></li>
-                            <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#">16</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
+                
             </section>
             <!-- content-main end// -->
             <footer class="main-footer font-xs">
