--- a/templates/homeapp/address.html
+++ b/templates/homeapp/address.html
@@ -13,14 +13,14 @@
 {% endblock css%} {% block content %}
 <section class="content-main">
   <div class="content-header">
-    <h2 class="content-title">Profile setting</h2>
+    <h2 class="content-title">Edit Address</h2>
   </div>
   <div class="card">
     <div class="card-body">
       <div class="row gx-5">
         <div class="col-lg-9">
           <section class="content-body p-xl-4">
-            <form method="POST" action="{% url 'editprofile' %}" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'editaddress' address.id %}" >
                 {% csrf_token %}
                 {% if messages%}
         {% for message in messages%}
@@ -34,56 +34,57 @@
                 <div class="col-lg-8">
                   <div class="row gx-3">
                     <div class="col-6 mb-3">
-                      <label class="form-label">First name</label>
+                      <label class="form-label">Fullname</label>
                       <input
                         class="form-control"
                         type="text"
-                        value="{{ request.user.first_name }}"
+                        value="{{ address.fullname }}"
                         name="fname"
                       />
                     </div>
                     <!-- col .// -->
                     <div class="col-6 mb-3">
-                      <label class="form-label">Last name</label>
+                      <label class="form-label">Number</label>
                       <input
                         class="form-control"
                         type="text"
                         placeholder="Type here"
-                        value="{{ request.user.last_name }}"
-                        name="lname"
+                        value="{{ address.contact_number }}"
+                        name="no"
                       />
                     </div>
                     <!-- col .// -->
+                    
                     <div class="col-lg-6 mb-3">
-                      <label class="form-label">Email</label>
+                        <label class="form-label">House</label>
+                        <input
+                          class="form-control"
+                          type="tel"
+                          placeholder="Enter your phone number"
+                          name="house"
+                          value="{{ address.house_name }}"
+                        />
+                    </div>
+                      <!-- col .// -->
+                    <div class="col-lg-6 mb-3">
+                      <label class="form-label">District</label>
                       <input
                         class="form-control"
-                        type="email"
+                        type="text"
                         placeholder="example@mail.com"
-                        value="{{ request.user.email }}"
-                        name="email"
-                      />
-                    </div>
-                    <!-- col .// -->
-                    <div class="col-lg-6 mb-3">
-                      <label class="form-label">Phone</label>
-                      <input
-                        class="form-control"
-                        type="tel"
-                        placeholder="Enter your phone number"
-                        name="phone"
-                        value="{{ user_profile.phone_no}}"
+                        value="{{ address.district }}"
+                        name="district"
                       />
                     </div>
                     <!-- col .// -->
                     <div class="col-lg-12 mb-3">
-                      <label class="form-label">Address</label>
+                      <label class="form-label">Landmark</label>
                       <input
                         class="form-control"
                         type="text"
                         placeholder="Type here"
-                        name="address"
-                        value="{{ user_profile.address }}"
+                        name="landmark"
+                        value="{{ address.landmark }}"
                       />
                     </div>
                     <!-- col .// -->
@@ -94,7 +95,7 @@
                         type="text"
                         placeholder="Type here"
                         name="city"
-                        value="{{ user_profile.city}}"
+                        value="{{ address.city}}"
                       />
                     </div>
                     <!-- col .// -->
@@ -105,7 +106,7 @@
                         type="text"
                         placeholder="Type here"
                         name="state"
-                        value="{{ user_profile.state}}"
+                        value="{{ address.state}}"
                       />
                     </div>
                     <!-- col .// -->
@@ -116,7 +117,7 @@
                         type="text"
                         placeholder="Type here"
                         name="country"
-                        value="{{ user_profile.country}}"
+                        value="{{ address.country}}"
                       />
                     </div>
                     <!-- col .// -->
@@ -124,24 +125,6 @@
                   <!-- row.// -->
                 </div>
                 <!-- col.// -->
-                <aside class="col-lg-4 p-5">
-                  <figure class="text-lg-center">
-                    <img
-                      class="img-lg mb-3 img-avatar"
-                      src="{{ user_profile.profile_picture.url }}"
-                      alt="User Photo"
-                      value="{{ user_profile.profile_picture }}"
-                    />
-                    <figcaption>
-                      <input
-                        class="btn btn-light rounded font-md"
-                        type="file"
-                        name="image"
-                      />
-                      <i class="icons material-icons md-backup font-md"></i>
-                    </figcaption>
-                  </figure>
-                </aside>
                 <!-- col.// -->
               </div>
               <!-- row.// -->
@@ -151,66 +134,9 @@
               </button>
             </form>
             
-              <h3 class="mt-3">Manage address</h3>
-              <br>
-              <button class="dropdown nav-item btn btn-white" style="border:1px solid black;">
-                <a
-                  class="dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  href="#"
-                  id="dropdownAccount"
-                  aria-expanded="false"
-                  
-                >
-                  Select address</a>
-                <div
-                  class="dropdown-menu dropdown-menu-end"
-                  aria-labelledby="dropdownAccount"
-                >
-                {% for address in addresses %}
-                
-               
-                  <a class="dropdown-item" href="{% url 'editaddress' address.id %}"
-                    >{{ address.fullname }}, {{ address.city }}, {{ address.pincode}}
-                    </a
-                  >
-                  {% endfor %}
-                </div>
-              </button>
+              
 
-            <hr class="my-5" />
-            <div class="row" style="max-width: 920px">
-              <div class="col-md">
-                <article class="box mb-3 bg-light">
-                  <a
-                    class="btn float-end btn-light btn-sm rounded font-md"
-                    href="{% url 'changepassword' %}"
-                    >Change</a
-                  >
-                  <h6>Password</h6>
-                  <small class="text-muted d-block" style="width: 70%"
-                    >You can reset or change your password by clicking
-                    here</small
-                  >
-                </article>
-              </div>
-              <!-- col.// -->
-              <div class="col-md">
-                <article class="box mb-3 bg-light">
-                  <a
-                    class="btn float-end btn-light rounded btn-sm font-md"
-                    href="#"
-                    >Deactivate</a
-                  >
-                  <h6>Remove account</h6>
-                  <small class="text-muted d-block" style="width: 70%"
-                    >Once you delete your account, there is no going
-                    back.</small
-                  >
-                </article>
-              </div>
-              <!-- col.// -->
-            </div>
+           
             <!-- row.// -->
           </section>
           <!-- content-body .// -->
