--- a/templates/homeapp/base.html
+++ b/templates/homeapp/base.html
@@ -70,6 +70,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<a class="dropdown-item" href="{% url 'profile' %}">My profile</a>
 									<a class="dropdown-item" href="{% url 'myorders' %}">My orders</a>
 									<a class="dropdown-item" href="{% url 'wishlist' %}">My wishlist</a>
+									{% if user.is_superuser %}
+									<a class="dropdown-item" href="{% url 'admin_dashboard' %}">Admin panel</a>
+									{% endif%}
 								</div>
 								{% else %}
 								<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -132,7 +135,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<!---->
 				</div>
 			</div>
-			<div class="search">
+			{% comment %} <div class="search">
 				<div class="mobile-nav-button">
 					<button id="trigger-overlay" type="button">
 						<i class="fas fa-search"></i>
@@ -150,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</button>
 					</form>
 
-				</div>
+				</div> {% endcomment %}
 				<!-- open/close -->
 			</div>
 			<label class="top-log mx-auto"></label>
@@ -170,7 +173,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="about.html">About</a>
+							<a class="nav-link" href="#">About</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -181,26 +184,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li>
 									<div class="row">
 										<div class="col-md-4 media-list span4 text-left">
-											<h5 class="tittle-w3layouts-sub"> Tittle goes here </h5>
+											<h5 class="tittle-w3layouts-sub"> Categories</h5>
 											<ul>
+												{% for link in links %}
+												
+												
 												<li class="media-mini mt-3">
-													<a href="{% url 'store' %}">Designer Glasses</a>
+													<a href="{% url 'store' %}"> {{link.category_name}}</a>
 												</li>
-												<li class="">
-													<a href="{% url 'store' %}"> Ray-Ban</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Prescription Glasses</a>
-												</li>
-												<li class="mt-3">
-													<h5>View more pages</h5>
-												</li>
-												<li class="mt-2">
-													<a href="about.html">About</a>
-												</li>
-												<li>
-													<a href="customer.html">Customers</a>
-												</li>
+												{% endfor %}
+												
 											</ul>
 										</div>
 										
@@ -210,7 +203,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true"
+							<a class="nav-link dropdown-toggle" href="{% url 'store' %}" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true"
 							    aria-expanded="false">
 								Shop
 							</a>
@@ -218,82 +211,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li>
 									<div class="row">
 										<div class="col-md-4 media-list span4 text-left">
-											<h5 class="tittle-w3layouts-sub"> Tittle goes here </h5>
+											<h5 class="tittle-w3layouts-sub"> Categories</h5>
 											<ul>
+												{% for category in links %}
+												
+												
 												<li class="media-mini mt-3">
-													<a href="{% url 'store' %}">Designer Glasses</a>
+													<a href="{% url 'store' %}">{{category.category_name}}</a>
 												</li>
-												<li class="">
-													<a href="{% url 'store' %}"> Ray-Ban</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Prescription Glasses</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Rx Sunglasses</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Contact Lenses</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Multifocal Glasses</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Kids Glasses</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Lightweight Glasses</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Sports Glasses</a>
-												</li>
+												{% endfor %}
+												
 											</ul>
 										</div>
 										<div class="col-md-4 media-list span4 text-left">
-											<h5 class="tittle-w3layouts-sub"> Tittle goes here </h5>
+											<h5 class="tittle-w3layouts-sub"> Brands </h5>
 											<ul>
+												{% for brand in brands %}
+												
+												
 												<li class="media-mini mt-3">
 
-													<a href="{% url 'store' %}">Brooks Brothers</a>
+													<a href="{% url 'store' %}">{{brand.brand_name}}</a>
 												</li>
-												<li>
-													<a href="{% url 'store' %}">Persol</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Polo Ralph Lauren</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Prada</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Ray-Ban Jr</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Sferoflex</a>
-												</li>
+												{% endfor %}
+												
 											</ul>
-											<ul class="sub-in text-left">
-
-												<li>
-													<a href="{% url 'store' %}">Polo Ralph Lauren</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Prada</a>
-												</li>
-												<li>
-													<a href="{% url 'store' %}">Ray-Ban Jr</a>
-												</li>
-											</ul>
+											
 
 										</div>
 										<div class="col-md-4 media-list span4 text-left">
 
-											<h5 class="tittle-w3layouts-sub-nav">Tittle goes here </h5>
-											<div class="media-mini mt-3">
-												<a href="{% url 'store' %}">
-													<img src="images/g1.jpg" class="img-fluid" alt="">
-												</a>
-											</div>
+											
 
 										</div>
 									</div>
@@ -302,7 +250,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="contact.html">Contact</a>
+							<a class="nav-link" href="#">Contact</a>
 						</li>
 					</ul>
 
