--- a/templates/homeapp/payment.html
+++ b/templates/homeapp/payment.html
@@ -53,7 +53,7 @@
 								<li>Cash on delivery (COD)</li>
 								{% comment %} <li>Credit/Debit</li>
 								<li>Net Banking</li> {% endcomment %}
-								<li>Paypal Account</li>
+								<li>Razorpay</li>
 							</ul>
 							<div class="resp-tabs-container">
 								<!--/tab_one-->
