--- a/templates/homeapp/base.html
+++ b/templates/homeapp/base.html
@@ -333,7 +333,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <a href="{% url 'index' %}">Home</a>
               </li>
               <li>
-                <a href="about.html">About</a>
+                <a href="#">About</a>
               </li>
               <li>
                 <a href="404.html">Error</a>
@@ -342,7 +342,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <a href="{% url 'store' %}">Shop</a>
               </li>
               <li>
-                <a href="contact.html">Contact Us</a>
+                <a href="#">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -373,8 +373,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="copyright-w3layouts mt-4">
           <p class="copy-right text-center">
-            &copy; 2018 Goggles. All Rights Reserved | Design by
-            <a href="http://w3layouts.com/"> W3layouts </a>
+            &copy;
+            <a href="#"> Faizulafnaz </a>
           </p>
         </div>
       </div>
