--- a/templates/homeapp/myorders.html
+++ b/templates/homeapp/myorders.html
@@ -25,7 +25,7 @@
     <div class="container">
         {% if not myorders %}
     
-        <h1>Your shopping cart is empty</h1>
+        <h1>Your Order list is empty</h1>
         <br>
         <br>
         <div class="col-md-4 checkout-left-basket" >
