--- a/templates/homeapp/shop.html
+++ b/templates/homeapp/shop.html
@@ -105,7 +105,7 @@
 												<div class="grid_meta">
 													<div class="product_price">
 														<h4>
-															<a href="{{ product.get_url }}"> {{ product.brand.brand_name }}
+															<a href="{{ product.get_url }}"> {{ product.product_name }}
 																 </a>
 														</h4>
 
