--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <title>Login Form Design | CodeLab</title>
-    <link rel="stylesheet" href="/static/css/stylelogin.css" />
-  </head>
-  <body>
+{% extends "homeapp/base.html" %}
+{% block css %}
+<link rel="stylesheet" href="/static/css/stylelogin.css" />
+{% endblock css %}
+
+{% block content %}
     <div class="wrapper">
       <div class="title">Login Form</div>
       <form action="{% url 'handlelogin' %}" method="POST">
@@ -55,5 +52,4 @@
         </div>
       </form>
     </div>
-  </body>
-</html>
+{% endblock %}
